<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/zoom_in"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/zoom_out"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rotate_left"
        android:title="@string/rotate_left"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rotate_right"
        android:title="@string/rotate_right"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset"
        android:title="Restablecer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_with"
        android:title="@string/open_with"
        app:showAsAction="never" />

</menu>