<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_list"
        android:title="@string/view_list"
        android:icon="@drawable/ic_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_grid"
        android:title="@string/view_grid"
        android:icon="@drawable/ic_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:title="Ordenar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden"
        android:title="Mostrar archivos ocultos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>